# StringAnalyzer

./: .gitignore  CMakeLists.txt  README.md
LoggerLib/: CMakeLists.txt
LoggerLib/Source_Files/: Logger.cpp
LoggerLib/include/: Logger.h
Scount/: CMakeLists.txt
Scount/Header_Files/: AppSettings.h  Application.h  HelpMessage.h  IProcess.h  IReader.h  IWriter.h  JsonWriter.h  SprintWriter.h  StdinReader.h  StringProcess.h
Scount/Source_Files/: AppSettings.cpp  Application.cpp  JsonWriter.cpp  SprintWriter.cpp  StdinReader.cpp  StringProcess.cpp  main.cpp
Sprint/: CMakeLists.txt
Sprint/Header_Files/: AppSettings.h  Application.h  HelpMessage.h  IReader.h  IWriter.h  ScountReader.h
Sprint/Source_Files/: AppSettings.cpp  ScountReader.cpp  main.cpp
